--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="main_background">#211A2C</color>
     <color name="yellow_icon_color">#FBC820</color>
     <color name="basket">#DE0000</color>
+    <color name="themeapp">#FF8400</color>
 
     <color name="cricket">#FF9437</color>
     <color name="volley">#FFEB6B</color>
