--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -9,14 +9,14 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/ic_undraw_profile_pic_ic5t"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:src="@drawable/ic_getstarted"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.15" />
 
     <TextView
         android:id="@+id/textView2"
@@ -36,11 +36,11 @@
         android:id="@+id/textView3"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="Find what really matters"
         android:textColor="@color/AppTextColour"
-        android:textSize="16dp"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -52,9 +52,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="60dp"
         app:boxCornerRadiusBottomEnd="8dp"
         app:boxCornerRadiusBottomStart="8dp"
         app:boxCornerRadiusTopEnd="8dp"
@@ -75,7 +75,7 @@
 
             android:inputType="textCapSentences|textWebEmailAddress"
             android:textColorHint="@color/black"
-            android:textSize="14sp" />
+            android:textSize="13sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -96,9 +96,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="50dp"
         app:boxCornerRadiusBottomEnd="8dp"
         app:boxCornerRadiusBottomStart="8dp"
         app:boxCornerRadiusTopEnd="8dp"
@@ -119,15 +119,15 @@
             android:hint="Password"
             android:inputType="textCapSentences|textPassword"
             android:textColorHint="@color/black"
-            android:textSize="14sp" />
+            android:textSize="13sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/login_button"
-        android:layout_width="181dp"
+        android:layout_width="161dp"
         android:layout_height="48dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="70dp"
         android:background="@drawable/buttonbg"
         android:backgroundTint="@color/themeapp"
