--- a/app/src/main/res/layout/categories_row_view.xml
+++ b/app/src/main/res/layout/categories_row_view.xml
@@ -10,21 +10,23 @@
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
+        android:layout_marginRight="8dp"
         android:clickable="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="2dp"
         app:cardBackgroundColor="#D1D1D1"
         app:cardCornerRadius="10dp"
         app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/categoryimage"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_gravity="center"
             android:gravity="center"
+            android:layout_margin="5dp"
             android:src="@drawable/furniture"
             app:tint="#595959" />
 
