added vendors list

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,21 +10,34 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:text="ONDC"
-        android:textSize="22dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="50dp"
         android:textColor="@color/black"
+        android:textSize="26dp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/filter"
+        android:layout_width="32dp"
+        android:layout_height="28dp"
+        android:scaleType="fitXY"
+        android:layout_marginEnd="24dp"
+        android:src="@drawable/ic_outline_filter_alt_24"
+        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView7" />
+
 
     <ImageView
         android:id="@+id/profileCircle"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:src="@drawable/ring"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/cardView13"
         app:layout_constraintEnd_toEndOf="@+id/cardView13"
         app:layout_constraintStart_toStartOf="@+id/cardView13"
@@ -34,35 +47,35 @@
         android:id="@+id/cardView13"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginStart="24dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="24dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView7">
 
-    <ImageView
-        android:id="@+id/profile"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_undraw_male_avatar_323b" />
+        <ImageView
+            android:id="@+id/profile"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_undraw_male_avatar_323b" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView7"
         android:layout_width="match_parent"
         android:layout_height="130dp"
+        android:layout_marginTop="40dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginTop="40dp"
         app:cardBackgroundColor="#2B263A"
         app:cardCornerRadius="16dp"
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="@+id/profileCircle"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7">
 
         <com.smarteist.autoimageslider.SliderView
@@ -95,11 +108,12 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Categories"
         android:layout_marginTop="30dp"
+        android:layout_marginStart="24dp"
+        android:text="Categories"
         android:textColor="@color/black"
         android:textSize="14dp"
-        app:layout_constraintStart_toStartOf="@+id/cardView7"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView7" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -107,6 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="22dp"
+        android:layout_marginEnd="22dp"
         android:layout_marginTop="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,9 +131,9 @@
         android:id="@+id/vendors_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="22dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="22dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
