--- a/app/src/main/res/layout/vendors_row_view.xml
+++ b/app/src/main/res/layout/vendors_row_view.xml
@@ -14,7 +14,7 @@
         android:layout_height="120dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp"
-        android:backgroundTint="#E4DDDD"
+        android:backgroundTint="#FFF7E3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
