--- a/app/src/main/res/layout/vendors_detail_row_view.xml
+++ b/app/src/main/res/layout/vendors_detail_row_view.xml
@@ -11,11 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginBottom="10dp"
-        app:cardCornerRadius="15dp"
+        app:cardCornerRadius="10dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        app:cardElevation="0dp"
-        android:backgroundTint="#FFF7E3"
+        app:cardElevation="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,28 +24,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingRight="12dp"
-            android:paddingLeft="8dp">
+            android:paddingLeft="4dp">
 
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/request_chat_cardview"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardCornerRadius="17.5dp"
-                app:cardElevation="2dp"
+                app:cardCornerRadius="10dp"
+                app:cardUseCompatPadding="true"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
+                app:cardElevation="0dp"
+                android:backgroundTint="#E7E1E1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="@color/themeapp"
-                app:strokeWidth="1dp">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/vendor_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="4dp"
+                    android:layout_margin="4dp"
                     android:src="@drawable/ic_undraw_male_avatar_323b" />
 
             </com.google.android.material.card.MaterialCardView>
