--- a/app/src/main/res/layout/vendors_detail_row_view.xml
+++ b/app/src/main/res/layout/vendors_detail_row_view.xml
@@ -10,7 +10,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="16dp"
         app:cardCornerRadius="10dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
@@ -29,7 +29,7 @@
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/request_chat_cardview"
-                android:layout_width="100dp"
+                android:layout_width="85dp"
                 android:layout_height="match_parent"
                 app:cardCornerRadius="10dp"
                 app:cardUseCompatPadding="true"
@@ -45,8 +45,8 @@
                     android:id="@+id/vendor_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="4dp"
-                    android:src="@drawable/ic_undraw_male_avatar_323b" />
+                    android:scaleType="fitXY"
+                    android:src="@drawable/a1" />
 
             </com.google.android.material.card.MaterialCardView>
 
@@ -64,7 +64,7 @@
                 android:textStyle="bold"
                 android:text="Roasted Chicken"
                 android:textColor="@color/black"
-                android:textSize="14sp"
+                android:textSize="15.5dp"
                 app:layout_constraintStart_toEndOf="@+id/request_chat_cardview"
                 app:layout_constraintTop_toTopOf="@+id/request_chat_cardview" />
 
@@ -104,22 +104,19 @@
             <TextView
                 android:id="@+id/complaince"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:background="@drawable/buttonbg"
-                android:backgroundTint="@color/themeapp"
-                android:clickable="true"
-                android:layout_marginRight="7dp"
-                android:layout_marginBottom="10dp"
-                android:foreground="?attr/selectableItemBackground"
+                android:layout_height="wrap_content"
+                android:background="@drawable/available_button"
                 android:gravity="center"
-                android:paddingLeft="10dp"
-                android:paddingTop="1dp"
-                android:paddingBottom="1dp"
-                android:paddingRight="10dp"
-                android:text="Approved"
-                android:textColor="@color/black"
-                android:textSize="12dp"
+                android:paddingLeft="12dp"
+                android:paddingTop="5dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="5dp"
+                android:text="Available Now"
+                android:textColor="#11BE18"
+                android:textSize="10dp"
+                android:layout_marginBottom="10dp"
                 android:textStyle="bold"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
